--- a/examples/1-managing-data/example.ipynb
+++ b/examples/1-managing-data/example.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../top_rated_wines.csv')\n",
+    "df = pd.read_csv('../../100_brazilian_wines.csv')\n",
     "df.head()"
    ]
   },
